@startuml

class User {
    + id: String
    + name: String
    + email: String
    + avatar: String
    + bio: String
    + favoriteCategories: List<String>
    + score: Int
    + streak: Int
}

class Question {
    + id: String
    + text: String
    + answerChoices: List<String>
    + correctAnswer: String
    + difficulty: String
    + tags: List<String>
}

class Score {
    + userId: String
    + date: Date
    + score: Int
    + correctAnswers: Int
    + incorrectAnswers: Int
    + streak: Int
}

class Leaderboard {
    + rank: Int
    + userId: String
    + name: String
    + score: Int
    + streak: Int
}

User --> Question : Get question
User --> Question : Submit answer
Question --> User : Check answer

User --> Score : Get score
User --> Score : Update score

Score --> Leaderboard : Update leaderboard

TwitterBot --> User : Send correct answer

@enduml